<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieCatalog2</string>
    <string name="app_name_" tools:ignore="Typos">MovieCatalog</string>
    <string name="ic_logo">logo</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">TvShow</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="tab_layout">tabLayout</string>
    <string name="detail_poster">Detail Poster</string>
    <string name="text_rating">9.0</string>
</resources>